--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
 		"@pinia/nuxt": "^0.10.1",
 		"@vueuse/nuxt": "^13.0.0",
 		"nuxt": "^3.16.0",
+		"nuxt-aos": "^1.2.5",
 		"pinia": "^3.0.1",
 		"vue": "^3.5.13",
-		"vue-router": "^4.5.0"
+		"vue-router": "^4.5.0",
+		"vue3-carousel-nuxt": "^1.1.5"
 	},
 	"devDependencies": {
 		"sass": "^1.85.1"
