--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 	},
 	"dependencies": {
 		"@nuxt/image": "^1.9.0",
+		"@nuxt/ui": "^3.0.2",
 		"@nuxtjs/tailwindcss": "^6.13.2",
 		"@pinia/nuxt": "^0.10.1",
 		"@vueuse/nuxt": "^13.0.0",
