--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"postinstall": "nuxt prepare"
 	},
 	"dependencies": {
+		"@formkit/auto-animate": "^0.8.2",
 		"@nuxt/image": "^1.9.0",
 		"@nuxt/ui": "^3.0.2",
 		"@nuxtjs/tailwindcss": "^6.13.2",
