--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@vueuse/nuxt": "^13.0.0",
 		"nuxt": "^3.16.0",
 		"nuxt-aos": "^1.2.5",
+		"nuxt-marquee": "^1.0.4",
 		"nuxt-swiper": "^2.0.0",
 		"pinia": "^3.0.1",
 		"vue": "^3.5.13",
